@@ -1,11 +1,9 @@
 package org.jsoup.parser;
 
-import org.jsoup.helper.DescendableLinkedList;
 import org.jsoup.helper.StringUtil;
 import org.jsoup.nodes.*;
 
-import java.util.Iterator;
-import java.util.LinkedList;
+import java.util.ArrayList;
 
 /**
  * The Tree Builder's current state. Each state embodies the processing for the state, and transitions to other states.
@@ -21,7 +19,9 @@ enum HtmlTreeBuilderState {
                 // todo: parse error check on expected doctypes
                 // todo: quirk state check on doctype ids
                 Token.Doctype d = t.asDoctype();
-                DocumentType doctype = new DocumentType(d.getName(), d.getPublicIdentifier(), d.getSystemIdentifier(), tb.getBaseUri());
+                DocumentType doctype = new DocumentType(
+                    tb.settings.normalizeTag(d.getName()), d.getPublicIdentifier(), d.getSystemIdentifier());
+                doctype.setPubSysKey(d.getPubSysKey());
                 tb.getDocument().appendChild(doctype);
                 if (d.isForceQuirks())
                     tb.getDocument().quirksMode(Document.QuirksMode.quirks);
@@ -43,10 +43,10 @@ enum HtmlTreeBuilderState {
                 tb.insert(t.asComment());
             } else if (isWhitespace(t)) {
                 return true; // ignore whitespace
-            } else if (t.isStartTag() && t.asStartTag().name().equals("html")) {
+            } else if (t.isStartTag() && t.asStartTag().normalName().equals("html")) {
                 tb.insert(t.asStartTag());
                 tb.transition(BeforeHead);
-            } else if (t.isEndTag() && (StringUtil.in(t.asEndTag().name(), "head", "body", "html", "br"))) {
+            } else if (t.isEndTag() && (StringUtil.in(t.asEndTag().normalName(), "head", "body", "html", "br"))) {
                 return anythingElse(t, tb);
             } else if (t.isEndTag()) {
                 tb.error(this);
@@ -58,7 +58,7 @@ enum HtmlTreeBuilderState {
         }
 
         private boolean anythingElse(Token t, HtmlTreeBuilder tb) {
-            tb.insert("html");
+            tb.insertStartTag("html");
             tb.transition(BeforeHead);
             return tb.process(t);
         }
@@ -72,20 +72,20 @@ enum HtmlTreeBuilderState {
             } else if (t.isDoctype()) {
                 tb.error(this);
                 return false;
-            } else if (t.isStartTag() && t.asStartTag().name().equals("html")) {
+            } else if (t.isStartTag() && t.asStartTag().normalName().equals("html")) {
                 return InBody.process(t, tb); // does not transition
-            } else if (t.isStartTag() && t.asStartTag().name().equals("head")) {
+            } else if (t.isStartTag() && t.asStartTag().normalName().equals("head")) {
                 Element head = tb.insert(t.asStartTag());
                 tb.setHeadElement(head);
                 tb.transition(InHead);
-            } else if (t.isEndTag() && (StringUtil.in(t.asEndTag().name(), "head", "body", "html", "br"))) {
-                tb.process(new Token.StartTag("head"));
+            } else if (t.isEndTag() && (StringUtil.in(t.asEndTag().normalName(), "head", "body", "html", "br"))) {
+                tb.processStartTag("head");
                 return tb.process(t);
             } else if (t.isEndTag()) {
                 tb.error(this);
                 return false;
             } else {
-                tb.process(new Token.StartTag("head"));
+                tb.processStartTag("head");
                 return tb.process(t);
             }
             return true;
@@ -106,7 +106,7 @@ enum HtmlTreeBuilderState {
                     return false;
                 case StartTag:
                     Token.StartTag start = t.asStartTag();
-                    String name = start.name();
+                    String name = start.normalName();
                     if (name.equals("html")) {
                         return InBody.process(t, tb);
                     } else if (StringUtil.in(name, "base", "basefont", "bgsound", "command", "link")) {
@@ -127,10 +127,11 @@ enum HtmlTreeBuilderState {
                         tb.transition(InHeadNoscript);
                     } else if (name.equals("script")) {
                         // skips some script rules as won't execute them
-                        tb.insert(start);
+
                         tb.tokeniser.transition(TokeniserState.ScriptData);
                         tb.markInsertionMode();
                         tb.transition(Text);
+                        tb.insert(start);
                     } else if (name.equals("head")) {
                         tb.error(this);
                         return false;
@@ -140,7 +141,7 @@ enum HtmlTreeBuilderState {
                     break;
                 case EndTag:
                     Token.EndTag end = t.asEndTag();
-                    name = end.name();
+                    name = end.normalName();
                     if (name.equals("head")) {
                         tb.pop();
                         tb.transition(AfterHead);
@@ -158,7 +159,7 @@ enum HtmlTreeBuilderState {
         }
 
         private boolean anythingElse(Token t, TreeBuilder tb) {
-            tb.process(new Token.EndTag("head"));
+            tb.processEndTag("head");
             return tb.process(t);
         }
     },
@@ -166,17 +167,17 @@ enum HtmlTreeBuilderState {
         boolean process(Token t, HtmlTreeBuilder tb) {
             if (t.isDoctype()) {
                 tb.error(this);
-            } else if (t.isStartTag() && t.asStartTag().name().equals("html")) {
+            } else if (t.isStartTag() && t.asStartTag().normalName().equals("html")) {
                 return tb.process(t, InBody);
-            } else if (t.isEndTag() && t.asEndTag().name().equals("noscript")) {
+            } else if (t.isEndTag() && t.asEndTag().normalName().equals("noscript")) {
                 tb.pop();
                 tb.transition(InHead);
-            } else if (isWhitespace(t) || t.isComment() || (t.isStartTag() && StringUtil.in(t.asStartTag().name(),
+            } else if (isWhitespace(t) || t.isComment() || (t.isStartTag() && StringUtil.in(t.asStartTag().normalName(),
                     "basefont", "bgsound", "link", "meta", "noframes", "style"))) {
                 return tb.process(t, InHead);
-            } else if (t.isEndTag() && t.asEndTag().name().equals("br")) {
+            } else if (t.isEndTag() && t.asEndTag().normalName().equals("br")) {
                 return anythingElse(t, tb);
-            } else if ((t.isStartTag() && StringUtil.in(t.asStartTag().name(), "head", "noscript")) || t.isEndTag()) {
+            } else if ((t.isStartTag() && StringUtil.in(t.asStartTag().normalName(), "head", "noscript")) || t.isEndTag()) {
                 tb.error(this);
                 return false;
             } else {
@@ -187,8 +188,8 @@ enum HtmlTreeBuilderState {
 
         private boolean anythingElse(Token t, HtmlTreeBuilder tb) {
             tb.error(this);
-            tb.process(new Token.EndTag("noscript"));
-            return tb.process(t);
+            tb.insert(new Token.Character().data(t.toString()));
+            return true;
         }
     },
     AfterHead {
@@ -201,7 +202,7 @@ enum HtmlTreeBuilderState {
                 tb.error(this);
             } else if (t.isStartTag()) {
                 Token.StartTag startTag = t.asStartTag();
-                String name = startTag.name();
+                String name = startTag.normalName();
                 if (name.equals("html")) {
                     return tb.process(t, InBody);
                 } else if (name.equals("body")) {
@@ -224,7 +225,7 @@ enum HtmlTreeBuilderState {
                     anythingElse(t, tb);
                 }
             } else if (t.isEndTag()) {
-                if (StringUtil.in(t.asEndTag().name(), "body", "html")) {
+                if (StringUtil.in(t.asEndTag().normalName(), "body", "html")) {
                     anythingElse(t, tb);
                 } else {
                     tb.error(this);
@@ -237,7 +238,7 @@ enum HtmlTreeBuilderState {
         }
 
         private boolean anythingElse(Token t, HtmlTreeBuilder tb) {
-            tb.process(new Token.StartTag("body"));
+            tb.processStartTag("body");
             tb.framesetOk(true);
             return tb.process(t);
         }
@@ -251,7 +252,7 @@ enum HtmlTreeBuilderState {
                         // todo confirm that check
                         tb.error(this);
                         return false;
-                    } else if (isWhitespace(c)) {
+                    } else if (tb.framesetOk() && isWhitespace(c)) { // don't check if whitespace if frames already closed
                         tb.reconstructFormattingElements();
                         tb.insert(c);
                     } else {
@@ -271,20 +272,65 @@ enum HtmlTreeBuilderState {
                 }
                 case StartTag:
                     Token.StartTag startTag = t.asStartTag();
-                    String name = startTag.name();
-                    if (name.equals("html")) {
+                    // todo - refactor to a switch statement
+                    String name = startTag.normalName();
+                    if (name.equals("a")) {
+                        if (tb.getActiveFormattingElement("a") != null) {
+                            tb.error(this);
+                            tb.processEndTag("a");
+
+                            // still on stack?
+                            Element remainingA = tb.getFromStack("a");
+                            if (remainingA != null) {
+                                tb.removeFromActiveFormattingElements(remainingA);
+                                tb.removeFromStack(remainingA);
+                            }
+                        }
+                        tb.reconstructFormattingElements();
+                        Element a = tb.insert(startTag);
+                        tb.pushActiveFormattingElements(a);
+                    } else if (StringUtil.inSorted(name, Constants.InBodyStartEmptyFormatters)) {
+                        tb.reconstructFormattingElements();
+                        tb.insertEmpty(startTag);
+                        tb.framesetOk(false);
+                    } else if (StringUtil.inSorted(name, Constants.InBodyStartPClosers)) {
+                        if (tb.inButtonScope("p")) {
+                            tb.processEndTag("p");
+                        }
+                        tb.insert(startTag);
+                    } else if (name.equals("span")) {
+                        // same as final else, but short circuits lots of checks
+                        tb.reconstructFormattingElements();
+                        tb.insert(startTag);
+                    } else if (name.equals("li")) {
+                        tb.framesetOk(false);
+                        ArrayList<Element> stack = tb.getStack();
+                        for (int i = stack.size() - 1; i > 0; i--) {
+                            Element el = stack.get(i);
+                            if (el.nodeName().equals("li")) {
+                                tb.processEndTag("li");
+                                break;
+                            }
+                            if (tb.isSpecial(el) && !StringUtil.inSorted(el.nodeName(), Constants.InBodyStartLiBreakers))
+                                break;
+                        }
+                        if (tb.inButtonScope("p")) {
+                            tb.processEndTag("p");
+                        }
+                        tb.insert(startTag);
+                    } else if (name.equals("html")) {
                         tb.error(this);
                         // merge attributes onto real html
-                        Element html = tb.getStack().getFirst();
+                        Element html = tb.getStack().get(0);
                         for (Attribute attribute : startTag.getAttributes()) {
                             if (!html.hasAttr(attribute.getKey()))
                                 html.attributes().put(attribute);
                         }
-                    } else if (StringUtil.in(name, "base", "basefont", "bgsound", "command", "link", "meta", "noframes", "script", "style", "title")) {
+                    } else if (StringUtil.inSorted(name, Constants.InBodyStartToHead)) {
                         return tb.process(t, InHead);
                     } else if (name.equals("body")) {
                         tb.error(this);
-                        LinkedList<Element> stack = tb.getStack();
+                        ArrayList<Element> stack = tb.getStack();
                         if (stack.size() == 1 || (stack.size() > 2 && !stack.get(1).nodeName().equals("body"))) {
                             // only in fragment case
                             return false; // ignore
@@ -298,7 +344,7 @@ enum HtmlTreeBuilderState {
                         }
                     } else if (name.equals("frameset")) {
                         tb.error(this);
-                        LinkedList<Element> stack = tb.getStack();
+                        ArrayList<Element> stack = tb.getStack();
                         if (stack.size() == 1 || (stack.size() > 2 && !stack.get(1).nodeName().equals("body"))) {
                             // only in fragment case
                             return false; // ignore
@@ -310,30 +356,22 @@ enum HtmlTreeBuilderState {
                                 second.remove();
                             // pop up to html element
                             while (stack.size() > 1)
-                                stack.removeLast();
+                                stack.remove(stack.size()-1);
                             tb.insert(startTag);
                             tb.transition(InFrameset);
                         }
-                    } else if (StringUtil.in(name,
-                            "address", "article", "aside", "blockquote", "center", "details", "dir", "div", "dl",
-                            "fieldset", "figcaption", "figure", "footer", "header", "hgroup", "menu", "nav", "ol",
-                            "p", "section", "summary", "ul")) {
+                    } else if (StringUtil.inSorted(name, Constants.Headings)) {
                         if (tb.inButtonScope("p")) {
-                            tb.process(new Token.EndTag("p"));
+                            tb.processEndTag("p");
                         }
-                        tb.insert(startTag);
-                    } else if (StringUtil.in(name, "h1", "h2", "h3", "h4", "h5", "h6")) {
-                        if (tb.inButtonScope("p")) {
-                            tb.process(new Token.EndTag("p"));
-                        }
-                        if (StringUtil.in(tb.currentElement().nodeName(), "h1", "h2", "h3", "h4", "h5", "h6")) {
+                        if (StringUtil.inSorted(tb.currentElement().nodeName(), Constants.Headings)) {
                             tb.error(this);
                             tb.pop();
                         }
                         tb.insert(startTag);
-                    } else if (StringUtil.in(name, "pre", "listing")) {
+                    } else if (StringUtil.inSorted(name, Constants.InBodyStartPreListing)) {
                         if (tb.inButtonScope("p")) {
-                            tb.process(new Token.EndTag("p"));
+                            tb.processEndTag("p");
                         }
                         tb.insert(startTag);
                         // todo: ignore LF if next token
@@ -344,45 +382,28 @@ enum HtmlTreeBuilderState {
                             return false;
                         }
                         if (tb.inButtonScope("p")) {
-                            tb.process(new Token.EndTag("p"));
+                            tb.processEndTag("p");
                         }
-                        Element form = tb.insert(startTag);
-                        tb.setFormElement(form);
-                    } else if (name.equals("li")) {
+                        tb.insertForm(startTag, true);
+                    } else if (StringUtil.inSorted(name, Constants.DdDt)) {
                         tb.framesetOk(false);
-                        LinkedList<Element> stack = tb.getStack();
+                        ArrayList<Element> stack = tb.getStack();
                         for (int i = stack.size() - 1; i > 0; i--) {
                             Element el = stack.get(i);
-                            if (el.nodeName().equals("li")) {
-                                tb.process(new Token.EndTag("li"));
+                            if (StringUtil.inSorted(el.nodeName(), Constants.DdDt)) {
+                                tb.processEndTag(el.nodeName());
                                 break;
                             }
-                            if (tb.isSpecial(el) && !StringUtil.in(el.nodeName(), "address", "div", "p"))
+                            if (tb.isSpecial(el) && !StringUtil.inSorted(el.nodeName(), Constants.InBodyStartLiBreakers))
                                 break;
                         }
                         if (tb.inButtonScope("p")) {
-                            tb.process(new Token.EndTag("p"));
-                        }
-                        tb.insert(startTag);
-                    } else if (StringUtil.in(name, "dd", "dt")) {
-                        tb.framesetOk(false);
-                        LinkedList<Element> stack = tb.getStack();
-                        for (int i = stack.size() - 1; i > 0; i--) {
-                            Element el = stack.get(i);
-                            if (StringUtil.in(el.nodeName(), "dd", "dt")) {
-                                tb.process(new Token.EndTag(el.nodeName()));
-                                break;
-                            }
-                            if (tb.isSpecial(el) && !StringUtil.in(el.nodeName(), "address", "div", "p"))
-                                break;
-                        }
-                        if (tb.inButtonScope("p")) {
-                            tb.process(new Token.EndTag("p"));
+                            tb.processEndTag("p");
                         }
                         tb.insert(startTag);
                     } else if (name.equals("plaintext")) {
                         if (tb.inButtonScope("p")) {
-                            tb.process(new Token.EndTag("p"));
+                            tb.processEndTag("p");
                         }
                         tb.insert(startTag);
                         tb.tokeniser.transition(TokeniserState.PLAINTEXT); // once in, never gets out
@@ -390,30 +411,14 @@ enum HtmlTreeBuilderState {
                         if (tb.inButtonScope("button")) {
                             // close and reprocess
                             tb.error(this);
-                            tb.process(new Token.EndTag("button"));
+                            tb.processEndTag("button");
                             tb.process(startTag);
                         } else {
                             tb.reconstructFormattingElements();
                             tb.insert(startTag);
                             tb.framesetOk(false);
                         }
-                    } else if (name.equals("a")) {
-                        if (tb.getActiveFormattingElement("a") != null) {
-                            tb.error(this);
-                            tb.process(new Token.EndTag("a"));
-
-                            // still on stack?
-                            Element remainingA = tb.getFromStack("a");
-                            if (remainingA != null) {
-                                tb.removeFromActiveFormattingElements(remainingA);
-                                tb.removeFromStack(remainingA);
-                            }
-                        }
-                        tb.reconstructFormattingElements();
-                        Element a = tb.insert(startTag);
-                        tb.pushActiveFormattingElements(a);
-                    } else if (StringUtil.in(name,
-                            "b", "big", "code", "em", "font", "i", "s", "small", "strike", "strong", "tt", "u")) {
+                    } else if (StringUtil.inSorted(name, Constants.Formatters)) {
                         tb.reconstructFormattingElements();
                         Element el = tb.insert(startTag);
                         tb.pushActiveFormattingElements(el);
@@ -421,76 +426,72 @@ enum HtmlTreeBuilderState {
                         tb.reconstructFormattingElements();
                         if (tb.inScope("nobr")) {
                             tb.error(this);
-                            tb.process(new Token.EndTag("nobr"));
+                            tb.processEndTag("nobr");
                             tb.reconstructFormattingElements();
                         }
                         Element el = tb.insert(startTag);
                         tb.pushActiveFormattingElements(el);
-                    } else if (StringUtil.in(name, "applet", "marquee", "object")) {
+                    } else if (StringUtil.inSorted(name, Constants.InBodyStartApplets)) {
                         tb.reconstructFormattingElements();
                         tb.insert(startTag);
                         tb.insertMarkerToFormattingElements();
                         tb.framesetOk(false);
                     } else if (name.equals("table")) {
                         if (tb.getDocument().quirksMode() != Document.QuirksMode.quirks && tb.inButtonScope("p")) {
-                            tb.process(new Token.EndTag("p"));
+                            tb.processEndTag("p");
                         }
                         tb.insert(startTag);
                         tb.framesetOk(false);
                         tb.transition(InTable);
-                    } else if (StringUtil.in(name, "area", "br", "embed", "img", "keygen", "wbr")) {
-                        tb.reconstructFormattingElements();
-                        tb.insertEmpty(startTag);
-                        tb.framesetOk(false);
                     } else if (name.equals("input")) {
                         tb.reconstructFormattingElements();
                         Element el = tb.insertEmpty(startTag);
                         if (!el.attr("type").equalsIgnoreCase("hidden"))
                             tb.framesetOk(false);
-                    } else if (StringUtil.in(name, "param", "source", "track")) {
+                    } else if (StringUtil.inSorted(name, Constants.InBodyStartMedia)) {
                         tb.insertEmpty(startTag);
                     } else if (name.equals("hr")) {
                         if (tb.inButtonScope("p")) {
-                            tb.process(new Token.EndTag("p"));
+                            tb.processEndTag("p");
                         }
                         tb.insertEmpty(startTag);
                         tb.framesetOk(false);
                     } else if (name.equals("image")) {
-                        // we're not supposed to ask.
-                        startTag.name("img");
-                        return tb.process(startTag);
+                        if (tb.getFromStack("svg") == null)
+                            return tb.process(startTag.name("img")); // change <image> to <img>, unless in svg
+                        else
+                            tb.insert(startTag);
                     } else if (name.equals("isindex")) {
                         // how much do we care about the early 90s?
                         tb.error(this);
                         if (tb.getFormElement() != null)
                             return false;
 
-                        tb.tokeniser.acknowledgeSelfClosingFlag();
-                        tb.process(new Token.StartTag("form"));
+                        tb.processStartTag("form");
                         if (startTag.attributes.hasKey("action")) {
                             Element form = tb.getFormElement();
                             form.attr("action", startTag.attributes.get("action"));
                         }
-                        tb.process(new Token.StartTag("hr"));
-                        tb.process(new Token.StartTag("label"));
+                        tb.processStartTag("hr");
+                        tb.processStartTag("label");
                         // hope you like english.
                         String prompt = startTag.attributes.hasKey("prompt") ?
                                 startTag.attributes.get("prompt") :
                                 "This is a searchable index. Enter search keywords: ";
 
-                        tb.process(new Token.Character(prompt));
+                        tb.process(new Token.Character().data(prompt));
 
                         // input
                         Attributes inputAttribs = new Attributes();
                         for (Attribute attr : startTag.attributes) {
-                            if (!StringUtil.in(attr.getKey(), "name", "action", "prompt"))
+                            if (!StringUtil.inSorted(attr.getKey(), Constants.InBodyStartInputAttribs))
                                 inputAttribs.put(attr);
                         }
                         inputAttribs.put("name", "isindex");
-                        tb.process(new Token.StartTag("input", inputAttribs));
-                        tb.process(new Token.EndTag("label"));
-                        tb.process(new Token.StartTag("hr"));
-                        tb.process(new Token.EndTag("form"));
+                        tb.processStartTag("input", inputAttribs);
+                        tb.processEndTag("label");
+                        tb.processStartTag("hr");
+                        tb.processEndTag("form");
                     } else if (name.equals("textarea")) {
                         tb.insert(startTag);
                         // todo: If the next token is a U+000A LINE FEED (LF) character token, then ignore that token and move on to the next one. (Newlines at the start of textarea elements are ignored as an authoring convenience.)
@@ -500,7 +501,7 @@ enum HtmlTreeBuilderState {
                         tb.transition(Text);
                     } else if (name.equals("xmp")) {
                         if (tb.inButtonScope("p")) {
-                            tb.process(new Token.EndTag("p"));
+                            tb.processEndTag("p");
                         }
                         tb.reconstructFormattingElements();
                         tb.framesetOk(false);
@@ -521,12 +522,12 @@ enum HtmlTreeBuilderState {
                             tb.transition(InSelectInTable);
                         else
                             tb.transition(InSelect);
-                    } else if (StringUtil.in("optgroup", "option")) {
+                    } else if (StringUtil.inSorted(name, Constants.InBodyStartOptions)) {
                         if (tb.currentElement().nodeName().equals("option"))
-                            tb.process(new Token.EndTag("option"));
+                            tb.processEndTag("option");
                         tb.reconstructFormattingElements();
                         tb.insert(startTag);
-                    } else if (StringUtil.in("rp", "rt")) {
+                    } else if (StringUtil.inSorted(name, Constants.InBodyStartRuby)) {
                         if (tb.inScope("ruby")) {
                             tb.generateImpliedEndTags();
                             if (!tb.currentElement().nodeName().equals("ruby")) {
@@ -539,14 +540,11 @@ enum HtmlTreeBuilderState {
                         tb.reconstructFormattingElements();
                         // todo: handle A start tag whose tag name is "math" (i.e. foreign, mathml)
                         tb.insert(startTag);
-                        tb.tokeniser.acknowledgeSelfClosingFlag();
                     } else if (name.equals("svg")) {
                         tb.reconstructFormattingElements();
                         // todo: handle A start tag whose tag name is "svg" (xlink, svg)
                         tb.insert(startTag);
-                        tb.tokeniser.acknowledgeSelfClosingFlag();
-                    } else if (StringUtil.in(name,
-                            "caption", "col", "colgroup", "frame", "head", "tbody", "td", "tfoot", "th", "thead", "tr")) {
+                    } else if (StringUtil.inSorted(name, Constants.InBodyStartDrop)) {
                         tb.error(this);
                         return false;
                     } else {
@@ -557,95 +555,9 @@ enum HtmlTreeBuilderState {
 
                 case EndTag:
                     Token.EndTag endTag = t.asEndTag();
-                    name = endTag.name();
-                    if (name.equals("body")) {
-                        if (!tb.inScope("body")) {
-                            tb.error(this);
-                            return false;
-                        } else {
-                            // todo: error if stack contains something not dd, dt, li, optgroup, option, p, rp, rt, tbody, td, tfoot, th, thead, tr, body, html
-                            tb.transition(AfterBody);
-                        }
-                    } else if (name.equals("html")) {
-                        boolean notIgnored = tb.process(new Token.EndTag("body"));
-                        if (notIgnored)
-                            return tb.process(endTag);
-                    } else if (StringUtil.in(name,
-                            "address", "article", "aside", "blockquote", "button", "center", "details", "dir", "div",
-                            "dl", "fieldset", "figcaption", "figure", "footer", "header", "hgroup", "listing", "menu",
-                            "nav", "ol", "pre", "section", "summary", "ul")) {
-                        // todo: refactor these lookups
-                        if (!tb.inScope(name)) {
-                            // nothing to close
-                            tb.error(this);
-                            return false;
-                        } else {
-                            tb.generateImpliedEndTags();
-                            if (!tb.currentElement().nodeName().equals(name))
-                                tb.error(this);
-                            tb.popStackToClose(name);
-                        }
-                    } else if (name.equals("form")) {
-                        Element currentForm = tb.getFormElement();
-                        tb.setFormElement(null);
-                        if (currentForm == null || !tb.inScope(name)) {
-                            tb.error(this);
-                            return false;
-                        } else {
-                            tb.generateImpliedEndTags();
-                            if (!tb.currentElement().nodeName().equals(name))
-                                tb.error(this);
-                            // remove currentForm from stack. will shift anything under up.
-                            tb.removeFromStack(currentForm);
-                        }
-                    } else if (name.equals("p")) {
-                        if (!tb.inButtonScope(name)) {
-                            tb.error(this);
-                            tb.process(new Token.StartTag(name)); // if no p to close, creates an empty <p></p>
-                            return tb.process(endTag);
-                        } else {
-                            tb.generateImpliedEndTags(name);
-                            if (!tb.currentElement().nodeName().equals(name))
-                                tb.error(this);
-                            tb.popStackToClose(name);
-                        }
-                    } else if (name.equals("li")) {
-                        if (!tb.inListItemScope(name)) {
-                            tb.error(this);
-                            return false;
-                        } else {
-                            tb.generateImpliedEndTags(name);
-                            if (!tb.currentElement().nodeName().equals(name))
-                                tb.error(this);
-                            tb.popStackToClose(name);
-                        }
-                    } else if (StringUtil.in(name, "dd", "dt")) {
-                        if (!tb.inScope(name)) {
-                            tb.error(this);
-                            return false;
-                        } else {
-                            tb.generateImpliedEndTags(name);
-                            if (!tb.currentElement().nodeName().equals(name))
-                                tb.error(this);
-                            tb.popStackToClose(name);
-                        }
-                    } else if (StringUtil.in(name, "h1", "h2", "h3", "h4", "h5", "h6")) {
-                        if (!tb.inScope(new String[]{"h1", "h2", "h3", "h4", "h5", "h6"})) {
-                            tb.error(this);
-                            return false;
-                        } else {
-                            tb.generateImpliedEndTags(name);
-                            if (!tb.currentElement().nodeName().equals(name))
-                                tb.error(this);
-                            tb.popStackToClose("h1", "h2", "h3", "h4", "h5", "h6");
-                        }
-                    } else if (name.equals("sarcasm")) {
-                        // *sigh*
-                        return anyOtherEndTag(t, tb);
-                    } else if (StringUtil.in(name,
-                            "a", "b", "big", "code", "em", "font", "i", "nobr", "s", "small", "strike", "strong", "tt", "u")) {
+                    name = endTag.normalName();
+                    if (StringUtil.inSorted(name, Constants.InBodyEndAdoptionFormatters)) {
                         // Adoption Agency Algorithm.
-                        OUTER:
                         for (int i = 0; i < 8; i++) {
                             Element formatEl = tb.getActiveFormattingElement(name);
                             if (formatEl == null)
@@ -663,8 +575,11 @@ enum HtmlTreeBuilderState {
                             Element furthestBlock = null;
                             Element commonAncestor = null;
                             boolean seenFormattingElement = false;
-                            LinkedList<Element> stack = tb.getStack();
-                            for (int si = 0; si < stack.size(); si++) {
+                            ArrayList<Element> stack = tb.getStack();
+                            // the spec doesn't limit to < 64, but in degenerate cases (9000+ stack depth) this prevents
+                            // run-aways
+                            final int stackSize = stack.size();
+                            for (int si = 0; si < stackSize && si < 64; si++) {
                                 Element el = stack.get(si);
                                 if (el == formatEl) {
                                     commonAncestor = stack.get(si - 1);
@@ -684,17 +599,17 @@ enum HtmlTreeBuilderState {
                             // does that mean: int pos of format el in list?
                             Element node = furthestBlock;
                             Element lastNode = furthestBlock;
-                            INNER:
                             for (int j = 0; j < 3; j++) {
                                 if (tb.onStack(node))
                                     node = tb.aboveOnStack(node);
                                 if (!tb.isInActiveFormattingElements(node)) { // note no bookmark check
                                     tb.removeFromStack(node);
-                                    continue INNER;
+                                    continue;
                                 } else if (node == formatEl)
-                                    break INNER;
+                                    break;
 
-                                Element replacement = new Element(Tag.valueOf(node.nodeName()), tb.getBaseUri());
+                                Element replacement = new Element(Tag.valueOf(node.nodeName(), ParseSettings.preserveCase), tb.getBaseUri());
+                                // case will follow the original node (so honours ParseSettings)
                                 tb.replaceActiveFormattingElement(node, replacement);
                                 tb.replaceOnStack(node, replacement);
                                 node = replacement;
@@ -710,7 +625,7 @@ enum HtmlTreeBuilderState {
                                 lastNode = node;
                             }
 
-                            if (StringUtil.in(commonAncestor.nodeName(), "table", "tbody", "tfoot", "thead", "tr")) {
+                            if (StringUtil.inSorted(commonAncestor.nodeName(), Constants.InBodyEndTableFosters)) {
                                 if (lastNode.parent() != null)
                                     lastNode.remove();
                                 tb.insertInFosterParent(lastNode);
@@ -720,8 +635,9 @@ enum HtmlTreeBuilderState {
                                 commonAncestor.appendChild(lastNode);
                             }
 
-                            Element adopter = new Element(Tag.valueOf(name), tb.getBaseUri());
-                            Node[] childNodes = furthestBlock.childNodes().toArray(new Node[furthestBlock.childNodes().size()]);
+                            Element adopter = new Element(formatEl.tag(), tb.getBaseUri());
+                            adopter.attributes().addAll(formatEl.attributes());
+                            Node[] childNodes = furthestBlock.childNodes().toArray(new Node[furthestBlock.childNodeSize()]);
                             for (Node childNode : childNodes) {
                                 adopter.appendChild(childNode); // append will reparent. thus the clone to avoid concurrent mod.
                             }
@@ -731,7 +647,90 @@ enum HtmlTreeBuilderState {
                             tb.removeFromStack(formatEl);
                             tb.insertOnStackAfter(furthestBlock, adopter);
                         }
-                    } else if (StringUtil.in(name, "applet", "marquee", "object")) {
+                    } else if (StringUtil.inSorted(name, Constants.InBodyEndClosers)) {
+                        if (!tb.inScope(name)) {
+                            // nothing to close
+                            tb.error(this);
+                            return false;
+                        } else {
+                            tb.generateImpliedEndTags();
+                            if (!tb.currentElement().nodeName().equals(name))
+                                tb.error(this);
+                            tb.popStackToClose(name);
+                        }
+                    } else if (name.equals("span")) {
+                        // same as final fall through, but saves short circuit
+                        return anyOtherEndTag(t, tb);
+                    } else if (name.equals("li")) {
+                        if (!tb.inListItemScope(name)) {
+                            tb.error(this);
+                            return false;
+                        } else {
+                            tb.generateImpliedEndTags(name);
+                            if (!tb.currentElement().nodeName().equals(name))
+                                tb.error(this);
+                            tb.popStackToClose(name);
+                        }
+                    } else if (name.equals("body")) {
+                        if (!tb.inScope("body")) {
+                            tb.error(this);
+                            return false;
+                        } else {
+                            // todo: error if stack contains something not dd, dt, li, optgroup, option, p, rp, rt, tbody, td, tfoot, th, thead, tr, body, html
+                            tb.transition(AfterBody);
+                        }
+                    } else if (name.equals("html")) {
+                        boolean notIgnored = tb.processEndTag("body");
+                        if (notIgnored)
+                            return tb.process(endTag);
+                    } else if (name.equals("form")) {
+                        Element currentForm = tb.getFormElement();
+                        tb.setFormElement(null);
+                        if (currentForm == null || !tb.inScope(name)) {
+                            tb.error(this);
+                            return false;
+                        } else {
+                            tb.generateImpliedEndTags();
+                            if (!tb.currentElement().nodeName().equals(name))
+                                tb.error(this);
+                            // remove currentForm from stack. will shift anything under up.
+                            tb.removeFromStack(currentForm);
+                        }
+                    } else if (name.equals("p")) {
+                        if (!tb.inButtonScope(name)) {
+                            tb.error(this);
+                            tb.processStartTag(name); // if no p to close, creates an empty <p></p>
+                            return tb.process(endTag);
+                        } else {
+                            tb.generateImpliedEndTags(name);
+                            if (!tb.currentElement().nodeName().equals(name))
+                                tb.error(this);
+                            tb.popStackToClose(name);
+                        }
+                    } else if (StringUtil.inSorted(name, Constants.DdDt)) {
+                        if (!tb.inScope(name)) {
+                            tb.error(this);
+                            return false;
+                        } else {
+                            tb.generateImpliedEndTags(name);
+                            if (!tb.currentElement().nodeName().equals(name))
+                                tb.error(this);
+                            tb.popStackToClose(name);
+                        }
+                    } else if (StringUtil.inSorted(name, Constants.Headings)) {
+                        if (!tb.inScope(Constants.Headings)) {
+                            tb.error(this);
+                            return false;
+                        } else {
+                            tb.generateImpliedEndTags(name);
+                            if (!tb.currentElement().nodeName().equals(name))
+                                tb.error(this);
+                            tb.popStackToClose(Constants.Headings);
+                        }
+                    } else if (name.equals("sarcasm")) {
+                        // *sigh*
+                        return anyOtherEndTag(t, tb);
+                    } else if (StringUtil.inSorted(name, Constants.InBodyStartApplets)) {
                         if (!tb.inScope("name")) {
                             if (!tb.inScope(name)) {
                                 tb.error(this);
@@ -745,7 +744,7 @@ enum HtmlTreeBuilderState {
                         }
                     } else if (name.equals("br")) {
                         tb.error(this);
-                        tb.process(new Token.StartTag("br"));
+                        tb.processStartTag("br");
                         return false;
                     } else {
                         return anyOtherEndTag(t, tb);
@@ -761,11 +760,10 @@ enum HtmlTreeBuilderState {
         }
 
         boolean anyOtherEndTag(Token t, HtmlTreeBuilder tb) {
-            String name = t.asEndTag().name();
-            DescendableLinkedList<Element> stack = tb.getStack();
-            Iterator<Element> it = stack.descendingIterator();
-            while (it.hasNext()) {
-                Element node = it.next();
+            String name = tb.settings.normalizeTag(t.asEndTag().name()); // matches with case sensitivity if enabled
+            ArrayList<Element> stack = tb.getStack();
+            for (int pos = stack.size() -1; pos >= 0; pos--) {
+                Element node = stack.get(pos);
                 if (node.nodeName().equals(name)) {
                     tb.generateImpliedEndTags(name);
                     if (!name.equals(tb.currentElement().nodeName()))
@@ -816,7 +814,7 @@ enum HtmlTreeBuilderState {
                 return false;
             } else if (t.isStartTag()) {
                 Token.StartTag startTag = t.asStartTag();
-                String name = startTag.name();
+                String name = startTag.normalName();
                 if (name.equals("caption")) {
                     tb.clearStackToTableContext();
                     tb.insertMarkerToFormattingElements();
@@ -827,18 +825,18 @@ enum HtmlTreeBuilderState {
                     tb.insert(startTag);
                     tb.transition(InColumnGroup);
                 } else if (name.equals("col")) {
-                    tb.process(new Token.StartTag("colgroup"));
+                    tb.processStartTag("colgroup");
                     return tb.process(t);
                 } else if (StringUtil.in(name, "tbody", "tfoot", "thead")) {
                     tb.clearStackToTableContext();
                     tb.insert(startTag);
                     tb.transition(InTableBody);
                 } else if (StringUtil.in(name, "td", "th", "tr")) {
-                    tb.process(new Token.StartTag("tbody"));
+                    tb.processStartTag("tbody");
                     return tb.process(t);
                 } else if (name.equals("table")) {
                     tb.error(this);
-                    boolean processed = tb.process(new Token.EndTag("table"));
+                    boolean processed = tb.processEndTag("table");
                     if (processed) // only ignored if in fragment
                         return tb.process(t);
                 } else if (StringUtil.in(name, "style", "script")) {
@@ -854,15 +852,15 @@ enum HtmlTreeBuilderState {
                     if (tb.getFormElement() != null)
                         return false;
                     else {
-                        Element form = tb.insertEmpty(startTag);
-                        tb.setFormElement(form);
+                        tb.insertForm(startTag, false);
                     }
                 } else {
                     return anythingElse(t, tb);
                 }
+                return true; // todo: check if should return processed http://www.whatwg.org/specs/web-apps/current-work/multipage/tree-construction.html#parsing-main-intable
             } else if (t.isEndTag()) {
                 Token.EndTag endTag = t.asEndTag();
-                String name = endTag.name();
+                String name = endTag.normalName();
 
                 if (name.equals("table")) {
                     if (!tb.inTableScope(name)) {
@@ -879,6 +877,7 @@ enum HtmlTreeBuilderState {
                 } else {
                     return anythingElse(t, tb);
                 }
+                return true; // todo: as above todo
             } else if (t.isEOF()) {
                 if (tb.currentElement().nodeName().equals("html"))
                     tb.error(this);
@@ -889,7 +888,7 @@ enum HtmlTreeBuilderState {
 
         boolean anythingElse(Token t, HtmlTreeBuilder tb) {
             tb.error(this);
-            boolean processed = true;
+            boolean processed;
             if (StringUtil.in(tb.currentElement().nodeName(), "table", "tbody", "tfoot", "thead", "tr")) {
                 tb.setFosterInserts(true);
                 processed = tb.process(t, InBody);
@@ -909,24 +908,25 @@ enum HtmlTreeBuilderState {
                         tb.error(this);
                         return false;
                     } else {
-                        tb.getPendingTableCharacters().add(c);
+                        tb.getPendingTableCharacters().add(c.getData());
                     }
                     break;
                 default:
+                    // todo - don't really like the way these table character data lists are built
                     if (tb.getPendingTableCharacters().size() > 0) {
-                        for (Token.Character character : tb.getPendingTableCharacters()) {
+                        for (String character : tb.getPendingTableCharacters()) {
                             if (!isWhitespace(character)) {
                                 // InTable anything else section:
                                 tb.error(this);
                                 if (StringUtil.in(tb.currentElement().nodeName(), "table", "tbody", "tfoot", "thead", "tr")) {
                                     tb.setFosterInserts(true);
-                                    tb.process(character, InBody);
+                                    tb.process(new Token.Character().data(character), InBody);
                                     tb.setFosterInserts(false);
                                 } else {
-                                    tb.process(character, InBody);
+                                    tb.process(new Token.Character().data(character), InBody);
                                 }
                             } else
-                                tb.insert(character);
+                                tb.insert(new Token.Character().data(character));
                         }
                         tb.newPendingTableCharacters();
                     }
@@ -938,9 +938,9 @@ enum HtmlTreeBuilderState {
     },
     InCaption {
         boolean process(Token t, HtmlTreeBuilder tb) {
-            if (t.isEndTag() && t.asEndTag().name().equals("caption")) {
+            if (t.isEndTag() && t.asEndTag().normalName().equals("caption")) {
                 Token.EndTag endTag = t.asEndTag();
-                String name = endTag.name();
+                String name = endTag.normalName();
                 if (!tb.inTableScope(name)) {
                     tb.error(this);
                     return false;
@@ -953,15 +953,15 @@ enum HtmlTreeBuilderState {
                     tb.transition(InTable);
                 }
             } else if ((
-                    t.isStartTag() && StringUtil.in(t.asStartTag().name(),
+                    t.isStartTag() && StringUtil.in(t.asStartTag().normalName(),
                             "caption", "col", "colgroup", "tbody", "td", "tfoot", "th", "thead", "tr") ||
-                            t.isEndTag() && t.asEndTag().name().equals("table"))
+                            t.isEndTag() && t.asEndTag().normalName().equals("table"))
                     ) {
                 tb.error(this);
-                boolean processed = tb.process(new Token.EndTag("caption"));
+                boolean processed = tb.processEndTag("caption");
                 if (processed)
                     return tb.process(t);
-            } else if (t.isEndTag() && StringUtil.in(t.asEndTag().name(),
+            } else if (t.isEndTag() && StringUtil.in(t.asEndTag().normalName(),
                     "body", "col", "colgroup", "html", "tbody", "td", "tfoot", "th", "thead", "tr")) {
                 tb.error(this);
                 return false;
@@ -986,18 +986,19 @@ enum HtmlTreeBuilderState {
                     break;
                 case StartTag:
                     Token.StartTag startTag = t.asStartTag();
-                    String name = startTag.name();
-                    if (name.equals("html"))
-                        return tb.process(t, InBody);
-                    else if (name.equals("col"))
-                        tb.insertEmpty(startTag);
-                    else
-                        return anythingElse(t, tb);
+                    switch (startTag.normalName()) {
+                        case "html":
+                            return tb.process(t, InBody);
+                        case "col":
+                            tb.insertEmpty(startTag);
+                            break;
+                        default:
+                            return anythingElse(t, tb);
+                    }
                     break;
                 case EndTag:
                     Token.EndTag endTag = t.asEndTag();
-                    name = endTag.name();
-                    if (name.equals("colgroup")) {
+                    if (endTag.normalName.equals("colgroup")) {
                         if (tb.currentElement().nodeName().equals("html")) { // frag case
                             tb.error(this);
                             return false;
@@ -1020,7 +1021,7 @@ enum HtmlTreeBuilderState {
         }
 
         private boolean anythingElse(Token t, TreeBuilder tb) {
-            boolean processed = tb.process(new Token.EndTag("colgroup"));
+            boolean processed = tb.processEndTag("colgroup");
             if (processed) // only ignored in frag case
                 return tb.process(t);
             return true;
@@ -1031,14 +1032,16 @@ enum HtmlTreeBuilderState {
             switch (t.type) {
                 case StartTag:
                     Token.StartTag startTag = t.asStartTag();
-                    String name = startTag.name();
-                    if (name.equals("tr")) {
+                    String name = startTag.normalName();
+                    if (name.equals("template")) {
+                        tb.insert(startTag);
+                    } else if (name.equals("tr")) {
                         tb.clearStackToTableBodyContext();
                         tb.insert(startTag);
                         tb.transition(InRow);
                     } else if (StringUtil.in(name, "th", "td")) {
                         tb.error(this);
-                        tb.process(new Token.StartTag("tr"));
+                        tb.processStartTag("tr");
                         return tb.process(startTag);
                     } else if (StringUtil.in(name, "caption", "col", "colgroup", "tbody", "tfoot", "thead")) {
                         return exitTableBody(t, tb);
@@ -1047,7 +1050,7 @@ enum HtmlTreeBuilderState {
                     break;
                 case EndTag:
                     Token.EndTag endTag = t.asEndTag();
-                    name = endTag.name();
+                    name = endTag.normalName();
                     if (StringUtil.in(name, "tbody", "tfoot", "thead")) {
                         if (!tb.inTableScope(name)) {
                             tb.error(this);
@@ -1078,7 +1081,7 @@ enum HtmlTreeBuilderState {
                 return false;
             }
             tb.clearStackToTableBodyContext();
-            tb.process(new Token.EndTag(tb.currentElement().nodeName())); // tbody, tfoot, thead
+            tb.processEndTag(tb.currentElement().nodeName()); // tbody, tfoot, thead
             return tb.process(t);
         }
 
@@ -1090,9 +1093,11 @@ enum HtmlTreeBuilderState {
         boolean process(Token t, HtmlTreeBuilder tb) {
             if (t.isStartTag()) {
                 Token.StartTag startTag = t.asStartTag();
-                String name = startTag.name();
+                String name = startTag.normalName();
 
-                if (StringUtil.in(name, "th", "td")) {
+                if (name.equals("template")) {
+                    tb.insert(startTag);
+                } else if (StringUtil.in(name, "th", "td")) {
                     tb.clearStackToTableRowContext();
                     tb.insert(startTag);
                     tb.transition(InCell);
@@ -1104,7 +1109,7 @@ enum HtmlTreeBuilderState {
                 }
             } else if (t.isEndTag()) {
                 Token.EndTag endTag = t.asEndTag();
-                String name = endTag.name();
+                String name = endTag.normalName();
 
                 if (name.equals("tr")) {
                     if (!tb.inTableScope(name)) {
@@ -1121,7 +1126,7 @@ enum HtmlTreeBuilderState {
                         tb.error(this);
                         return false;
                     }
-                    tb.process(new Token.EndTag("tr"));
+                    tb.processEndTag("tr");
                     return tb.process(t);
                 } else if (StringUtil.in(name, "body", "caption", "col", "colgroup", "html", "td", "th")) {
                     tb.error(this);
@@ -1140,7 +1145,7 @@ enum HtmlTreeBuilderState {
         }
 
         private boolean handleMissingTr(Token t, TreeBuilder tb) {
-            boolean processed = tb.process(new Token.EndTag("tr"));
+            boolean processed = tb.processEndTag("tr");
             if (processed)
                 return tb.process(t);
             else
@@ -1151,7 +1156,7 @@ enum HtmlTreeBuilderState {
         boolean process(Token t, HtmlTreeBuilder tb) {
             if (t.isEndTag()) {
                 Token.EndTag endTag = t.asEndTag();
-                String name = endTag.name();
+                String name = endTag.normalName();
 
                 if (StringUtil.in(name, "td", "th")) {
                     if (!tb.inTableScope(name)) {
@@ -1179,7 +1184,7 @@ enum HtmlTreeBuilderState {
                     return anythingElse(t, tb);
                 }
             } else if (t.isStartTag() &&
-                    StringUtil.in(t.asStartTag().name(),
+                    StringUtil.in(t.asStartTag().normalName(),
                             "caption", "col", "colgroup", "tbody", "td", "tfoot", "th", "thead", "tr")) {
                 if (!(tb.inTableScope("td") || tb.inTableScope("th"))) {
                     tb.error(this);
@@ -1199,9 +1204,9 @@ enum HtmlTreeBuilderState {
 
         private void closeCell(HtmlTreeBuilder tb) {
             if (tb.inTableScope("td"))
-                tb.process(new Token.EndTag("td"));
+                tb.processEndTag("td");
             else
-                tb.process(new Token.EndTag("th")); // only here if th or td in scope
+                tb.processEndTag("th"); // only here if th or td in scope
         }
     },
     InSelect {
@@ -1224,26 +1229,27 @@ enum HtmlTreeBuilderState {
                     return false;
                 case StartTag:
                     Token.StartTag start = t.asStartTag();
-                    String name = start.name();
+                    String name = start.normalName();
                     if (name.equals("html"))
                         return tb.process(start, InBody);
                     else if (name.equals("option")) {
-                        tb.process(new Token.EndTag("option"));
+                        if (tb.currentElement().nodeName().equals("option"))
+                            tb.processEndTag("option");
                         tb.insert(start);
                     } else if (name.equals("optgroup")) {
                         if (tb.currentElement().nodeName().equals("option"))
-                            tb.process(new Token.EndTag("option"));
+                            tb.processEndTag("option");
                         else if (tb.currentElement().nodeName().equals("optgroup"))
-                            tb.process(new Token.EndTag("optgroup"));
+                            tb.processEndTag("optgroup");
                         tb.insert(start);
                     } else if (name.equals("select")) {
                         tb.error(this);
-                        return tb.process(new Token.EndTag("select"));
+                        return tb.processEndTag("select");
                     } else if (StringUtil.in(name, "input", "keygen", "textarea")) {
                         tb.error(this);
                         if (!tb.inSelectScope("select"))
                             return false; // frag
-                        tb.process(new Token.EndTag("select"));
+                        tb.processEndTag("select");
                         return tb.process(start);
                     } else if (name.equals("script")) {
                         return tb.process(t, InHead);
@@ -1253,29 +1259,34 @@ enum HtmlTreeBuilderState {
                     break;
                 case EndTag:
                     Token.EndTag end = t.asEndTag();
-                    name = end.name();
-                    if (name.equals("optgroup")) {
-                        if (tb.currentElement().nodeName().equals("option") && tb.aboveOnStack(tb.currentElement()) != null && tb.aboveOnStack(tb.currentElement()).nodeName().equals("optgroup"))
-                            tb.process(new Token.EndTag("option"));
-                        if (tb.currentElement().nodeName().equals("optgroup"))
-                            tb.pop();
-                        else
-                            tb.error(this);
-                    } else if (name.equals("option")) {
-                        if (tb.currentElement().nodeName().equals("option"))
-                            tb.pop();
-                        else
-                            tb.error(this);
-                    } else if (name.equals("select")) {
-                        if (!tb.inSelectScope(name)) {
-                            tb.error(this);
-                            return false;
-                        } else {
-                            tb.popStackToClose(name);
-                            tb.resetInsertionMode();
-                        }
-                    } else
-                        return anythingElse(t, tb);
+                    name = end.normalName();
+                    switch (name) {
+                        case "optgroup":
+                            if (tb.currentElement().nodeName().equals("option") && tb.aboveOnStack(tb.currentElement()) != null && tb.aboveOnStack(tb.currentElement()).nodeName().equals("optgroup"))
+                                tb.processEndTag("option");
+                            if (tb.currentElement().nodeName().equals("optgroup"))
+                                tb.pop();
+                            else
+                                tb.error(this);
+                            break;
+                        case "option":
+                            if (tb.currentElement().nodeName().equals("option"))
+                                tb.pop();
+                            else
+                                tb.error(this);
+                            break;
+                        case "select":
+                            if (!tb.inSelectScope(name)) {
+                                tb.error(this);
+                                return false;
+                            } else {
+                                tb.popStackToClose(name);
+                                tb.resetInsertionMode();
+                            }
+                            break;
+                        default:
+                            return anythingElse(t, tb);
+                    }
                     break;
                 case EOF:
                     if (!tb.currentElement().nodeName().equals("html"))
@@ -1294,14 +1305,14 @@ enum HtmlTreeBuilderState {
     },
     InSelectInTable {
         boolean process(Token t, HtmlTreeBuilder tb) {
-            if (t.isStartTag() && StringUtil.in(t.asStartTag().name(), "caption", "table", "tbody", "tfoot", "thead", "tr", "td", "th")) {
+            if (t.isStartTag() && StringUtil.in(t.asStartTag().normalName(), "caption", "table", "tbody", "tfoot", "thead", "tr", "td", "th")) {
                 tb.error(this);
-                tb.process(new Token.EndTag("select"));
+                tb.processEndTag("select");
                 return tb.process(t);
-            } else if (t.isEndTag() && StringUtil.in(t.asEndTag().name(), "caption", "table", "tbody", "tfoot", "thead", "tr", "td", "th")) {
+            } else if (t.isEndTag() && StringUtil.in(t.asEndTag().normalName(), "caption", "table", "tbody", "tfoot", "thead", "tr", "td", "th")) {
                 tb.error(this);
-                if (tb.inTableScope(t.asEndTag().name())) {
-                    tb.process(new Token.EndTag("select"));
+                if (tb.inTableScope(t.asEndTag().normalName())) {
+                    tb.processEndTag("select");
                     return (tb.process(t));
                 } else
                     return false;
@@ -1319,9 +1330,9 @@ enum HtmlTreeBuilderState {
             } else if (t.isDoctype()) {
                 tb.error(this);
                 return false;
-            } else if (t.isStartTag() && t.asStartTag().name().equals("html")) {
+            } else if (t.isStartTag() && t.asStartTag().normalName().equals("html")) {
                 return tb.process(t, InBody);
-            } else if (t.isEndTag() && t.asEndTag().name().equals("html")) {
+            } else if (t.isEndTag() && t.asEndTag().normalName().equals("html")) {
                 if (tb.isFragmentParsing()) {
                     tb.error(this);
                     return false;
@@ -1349,20 +1360,22 @@ enum HtmlTreeBuilderState {
                 return false;
             } else if (t.isStartTag()) {
                 Token.StartTag start = t.asStartTag();
-                String name = start.name();
-                if (name.equals("html")) {
-                    return tb.process(start, InBody);
-                } else if (name.equals("frameset")) {
-                    tb.insert(start);
-                } else if (name.equals("frame")) {
-                    tb.insertEmpty(start);
-                } else if (name.equals("noframes")) {
-                    return tb.process(start, InHead);
-                } else {
-                    tb.error(this);
-                    return false;
+                switch (start.normalName()) {
+                    case "html":
+                        return tb.process(start, InBody);
+                    case "frameset":
+                        tb.insert(start);
+                        break;
+                    case "frame":
+                        tb.insertEmpty(start);
+                        break;
+                    case "noframes":
+                        return tb.process(start, InHead);
+                    default:
+                        tb.error(this);
+                        return false;
                 }
-            } else if (t.isEndTag() && t.asEndTag().name().equals("frameset")) {
+            } else if (t.isEndTag() && t.asEndTag().normalName().equals("frameset")) {
                 if (tb.currentElement().nodeName().equals("html")) { // frag
                     tb.error(this);
                     return false;
@@ -1393,11 +1406,11 @@ enum HtmlTreeBuilderState {
             } else if (t.isDoctype()) {
                 tb.error(this);
                 return false;
-            } else if (t.isStartTag() && t.asStartTag().name().equals("html")) {
+            } else if (t.isStartTag() && t.asStartTag().normalName().equals("html")) {
                 return tb.process(t, InBody);
-            } else if (t.isEndTag() && t.asEndTag().name().equals("html")) {
+            } else if (t.isEndTag() && t.asEndTag().normalName().equals("html")) {
                 tb.transition(AfterAfterFrameset);
-            } else if (t.isStartTag() && t.asStartTag().name().equals("noframes")) {
+            } else if (t.isStartTag() && t.asStartTag().normalName().equals("noframes")) {
                 return tb.process(t, InHead);
             } else if (t.isEOF()) {
                 // cool your heels, we're complete
@@ -1412,7 +1425,7 @@ enum HtmlTreeBuilderState {
         boolean process(Token t, HtmlTreeBuilder tb) {
             if (t.isComment()) {
                 tb.insert(t.asComment());
-            } else if (t.isDoctype() || isWhitespace(t) || (t.isStartTag() && t.asStartTag().name().equals("html"))) {
+            } else if (t.isDoctype() || isWhitespace(t) || (t.isStartTag() && t.asStartTag().normalName().equals("html"))) {
                 return tb.process(t, InBody);
             } else if (t.isEOF()) {
                 // nice work chuck
@@ -1428,11 +1441,11 @@ enum HtmlTreeBuilderState {
         boolean process(Token t, HtmlTreeBuilder tb) {
             if (t.isComment()) {
                 tb.insert(t.asComment());
-            } else if (t.isDoctype() || isWhitespace(t) || (t.isStartTag() && t.asStartTag().name().equals("html"))) {
+            } else if (t.isDoctype() || isWhitespace(t) || (t.isStartTag() && t.asStartTag().normalName().equals("html"))) {
                 return tb.process(t, InBody);
             } else if (t.isEOF()) {
                 // nice work chuck
-            } else if (t.isStartTag() && t.asStartTag().name().equals("noframes")) {
+            } else if (t.isStartTag() && t.asStartTag().normalName().equals("noframes")) {
                 return tb.process(t, InHead);
             } else {
                 tb.error(this);
@@ -1455,28 +1468,58 @@ enum HtmlTreeBuilderState {
     private static boolean isWhitespace(Token t) {
         if (t.isCharacter()) {
             String data = t.asCharacter().getData();
-            // todo: this checks more than spec - "\t", "\n", "\f", "\r", " "
-            for (int i = 0; i < data.length(); i++) {
-                char c = data.charAt(i);
-                if (!StringUtil.isWhitespace(c))
-                    return false;
-            }
-            return true;
+            return isWhitespace(data);
         }
         return false;
     }
 
+    private static boolean isWhitespace(String data) {
+        // todo: this checks more than spec - "\t", "\n", "\f", "\r", " "
+        for (int i = 0; i < data.length(); i++) {
+            char c = data.charAt(i);
+            if (!StringUtil.isWhitespace(c))
+                return false;
+        }
+        return true;
+    }
+
     private static void handleRcData(Token.StartTag startTag, HtmlTreeBuilder tb) {
-        tb.insert(startTag);
         tb.tokeniser.transition(TokeniserState.Rcdata);
         tb.markInsertionMode();
         tb.transition(Text);
+        tb.insert(startTag);
     }
 
     private static void handleRawtext(Token.StartTag startTag, HtmlTreeBuilder tb) {
-        tb.insert(startTag);
         tb.tokeniser.transition(TokeniserState.Rawtext);
         tb.markInsertionMode();
         tb.transition(Text);
+        tb.insert(startTag);
+    }
+
+    // lists of tags to search through. A little harder to read here, but causes less GC than dynamic varargs.
+    // was contributing around 10% of parse GC load.
+    private static final class Constants {
+        private static final String[] InBodyStartToHead = new String[]{"base", "basefont", "bgsound", "command", "link", "meta", "noframes", "script", "style", "title"};
+        private static final String[] InBodyStartPClosers = new String[]{"address", "article", "aside", "blockquote", "center", "details", "dir", "div", "dl",
+                "fieldset", "figcaption", "figure", "footer", "header", "hgroup", "menu", "nav", "ol",
+                "p", "section", "summary", "ul"};
+        private static final String[] Headings = new String[]{"h1", "h2", "h3", "h4", "h5", "h6"};
+        private static final String[] InBodyStartPreListing = new String[]{"pre", "listing"};
+        private static final String[] InBodyStartLiBreakers = new String[]{"address", "div", "p"};
+        private static final String[] DdDt = new String[]{"dd", "dt"};
+        private static final String[] Formatters = new String[]{"b", "big", "code", "em", "font", "i", "s", "small", "strike", "strong", "tt", "u"};
+        private static final String[] InBodyStartApplets = new String[]{"applet", "marquee", "object"};
+        private static final String[] InBodyStartEmptyFormatters = new String[]{"area", "br", "embed", "img", "keygen", "wbr"};
+        private static final String[] InBodyStartMedia = new String[]{"param", "source", "track"};
+        private static final String[] InBodyStartInputAttribs = new String[]{"name", "action", "prompt"};
+        private static final String[] InBodyStartOptions = new String[]{"optgroup", "option"};
+        private static final String[] InBodyStartRuby = new String[]{"rp", "rt"};
+        private static final String[] InBodyStartDrop = new String[]{"caption", "col", "colgroup", "frame", "head", "tbody", "td", "tfoot", "th", "thead", "tr"};
+        private static final String[] InBodyEndClosers = new String[]{"address", "article", "aside", "blockquote", "button", "center", "details", "dir", "div",
+                "dl", "fieldset", "figcaption", "figure", "footer", "header", "hgroup", "listing", "menu",
+                "nav", "ol", "pre", "section", "summary", "ul"};
+        private static final String[] InBodyEndAdoptionFormatters = new String[]{"a", "b", "big", "code", "em", "font", "i", "nobr", "s", "small", "strike", "strong", "tt", "u"};
+        private static final String[] InBodyEndTableFosters = new String[]{"table", "tbody", "tfoot", "thead", "tr"};
     }
 }
